# b2bH-vlq

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
data/: BDT_tree_M1000_14TeV.root  BDT_tree_M1200_14TeV.root  BDT_tree_M1500_14TeV.root  BDT_tree_M1800_14TeV.root  BDT_tree_M2000_14TeV.root  BDT_tree_M2200_14TeV.root  BDT_tree_M800_14TeV.root  BKG_tree_VBF_14TeV.root  BKG_tree_WH_14TeV.root  BKG_tree_ZH_14TeV.root  BKG_tree_tHq_14TeV.root  BKG_tree_ttH_14TeV.root
notebooks/: bdt-training.ipynb  xgboost-get-run.ipynb  xgboost-resonant-bkg.ipynb
src/b2bH_vlq/: __init__.py  observables.py  registry.py
