[project]
name = "b2bH-vlq"
version = "0.1.0"
description = "B -> bH VLQ analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "uproot>=5.6.2",
    "anaheptools"
]

[tool.uv.sources]
anaheptools = { workspace = true}

[tool.uv.workspace]
members = [".", "packages/anaheptools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b2bH_vlq"]
