[project]
name = "b2bH-vlq"
version = "0.1.0"
description = "B -> bH VLQ analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "uproot>=5.6.2",
    "hepkit"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "isort>=6.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "nbstripout>=0.7.0",
]

[tool.uv.sources]
hepkit = { workspace = true}

[tool.uv.workspace]
members = [".", "packages/anaheptools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b2bH_vlq"]

[tool.black]
line-length = 100
target-version = ["py312"]
# include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N"
]
ignore = [
    "E501",  # line too long, handled by black
    "B006",  # Do not use mutable data structures for argument defaults
    "B008",  # do not perform function calls in argument defaults
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
    "C901",  # too complex

]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["build", "dist", "__pycache__", ".venv"]
