[project]
name = "b2bH-vlq"
version = "0.1.0"
description = "B -> bH VLQ analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "uproot>=5.6.2",
    "hepkit @ git+https://github.com/rrabadan/hepkit.git@main",
    "catboost>=1.2.8",
    "xgboost>=3.1.1",
    "mlflow>=3.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "nbstripout>=0.7.0",
]

[tool.uv.workspace]
members = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b2bH_vlq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N"
]
ignore = [
    "C901",  # too complex
    "E501",  # line too long, handled by black
    "B006",  # Do not use mutable data structures for argument defaults
    "B008",  # do not perform function calls in argument defaults
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
    "N816",  # Variable in global scope should not be mixedCase
    "N999",  # Dunder name not recognized
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["build", "dist", "__pycache__", ".venv"]
